# Safe

./: .gitignore  CMakeLists.txt  Makefile  README.md  appveyor.yml  bounds.cpp  codecov.yml  demo.cpp  heap.cpp  safe.hpp  sonar-project.properties
.circleci/: config.yml
.github/workflows/: cmake.yml
examples/: bounds.cpp  demo.cpp
include/: safe.hpp
test/: mem_heap_test.cpp  test1.cpp
unit_test/: mem_heap_test.cpp
